--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -2,11 +2,12 @@
 	<div class="jumbotron">
 		<h1><span translate="Mainpage.WelcomeBack">Welcome back</span>, {{CurrentUser.userdisplayas}}!</h1>
 		<p>
-			This is a home page. <br /> It shall contains some descriptions.<br />
+			This is a home page. <br /> 
+			It shall contains some descriptions.<br />
 			And it hasn't been done yet.
 			<br />
             <br />
-			The running version built on: 2015.09.17			
+			The running version built on: 2015.09.23			
 		</p>
 		<p>
 			<a class="btn btn-primary btn-lg" ui-sref="home.userdetail"
