--- a/app/views/finance/financedocument_tran.html
+++ b/app/views/finance/financedocument_tran.html
@@ -121,7 +121,9 @@
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
-					ng-disabled="frmObj.$invalid || !frmObj.$dirty" translate="Common.Submit">Submit</button>
+					translate="Common.Submit">Submit</button>
+                    
+                    <!--ng-disabled="frmObj.$invalid || !frmObj.$dirty"-->
 				<button class="btn btn-danger" ng-click="close()" translate="Common.Cancel">Cancel</button>
 			</div>
 		</div>
