--- a/app/views/finance/financereportbs.html
+++ b/app/views/finance/financereportbs.html
@@ -5,6 +5,8 @@
 		</h2>
 	</div>
 	
+	<div>Currency: <span class="label label-default">{{ReportCurrency}}</span></div>
+	
 	<div id="gridFinReportBS" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
 		 style="width: 100%; height: 500px;"></div>
 </div>
