--- a/app/views/finance/financereportcc.html
+++ b/app/views/finance/financereportcc.html
@@ -8,34 +8,50 @@
 	<form class="form-horizontal" role="form" name="frmObj" style="margin: 30px, 10px;">
 		<div class="form-group">
 			<label class="control-label col-sm-2" translate="Common.ValidFrom">Valid from</label>
-			<div class="input-group">
-				<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="ValidFromDate" is-open="isValidfromDateOpened"
-						datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-				<span class="input-group-btn">
-					<button type="button" class="btn btn-default" ng-click="openValidfromDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-				</span>
+			<div class="col-sm-10">
+				<div class="input-group">
+					<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="ValidFromDate" is-open="isValidfromDateOpened"
+							datepicker-options="dateOptions" required close-text="{{'Common.Close' | translate }}" />
+					<span class="input-group-btn">
+						<button type="button" class="btn btn-default" ng-click="openValidfromDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+					</span>
+				</div>
 			</div>
 		</div>
-		
+
 		<div class="form-group">
 			<label class="control-label col-sm-2" translate="Common.ValidTo">Valid to</label>
-			<div class="input-group">
-				<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="ValidToDate" is-open="isValidtoDateOpened"
-						datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-				<span class="input-group-btn">
-					<button type="button" class="btn btn-default" ng-click="openValidtoDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-				</span>
+			<div class="col-sm-10">
+				<div class="input-group">
+					<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="ValidToDate" is-open="isValidtoDateOpened"
+							datepicker-options="dateOptions" required close-text="{{'Common.Close' | translate }}" />
+					<span class="input-group-btn">
+						<button type="button" class="btn btn-default" ng-click="openValidtoDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+					</span>
+				</div>
 			</div>
 		</div>
 		
 		<div class="form-group">
 			<div class="col-sm-10">
-				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
+				<button class="btn btn-default btn-primary" ng-click="submit()"
 						ng-disabled="frmObj.$invalid || !frmObj.$dirty">Submit</button>
 			</div>
 		</div>
 	</form>
 	
+	<div>Currency: <span class="label label-default">{{ReportCurrency}}</span></div>
+	
 	<div id="gridFinReportCC" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
 		 style="width: 100%; height: 500px;"></div>
+		 
+	<!-- Chart -->
+	<br>
+	<br>
+	
+    <div>
+		<canvas id="barCC" class="chart chart-bar"
+ 				chart-data="dataCC" chart-labels="labelsCC">
+		</canvas> 
+	</div>
 </div>
