--- a/app/views/finance/financereportorder.html
+++ b/app/views/finance/financereportorder.html
@@ -5,6 +5,7 @@
 		</h2>
 	</div>
 	
+	<div>Currency: <span class="label label-default">{{ReportCurrency}}</span></div>
 	<div id="gridFinReportOrder" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
 		 style="width: 100%; height: 500px;"></div>
 </div>
