--- a/app/views/home.html
+++ b/app/views/home.html
@@ -158,7 +158,7 @@
 								<li><a ui-sref="home.finance.report.orderbalance"><span translate="Finance.OrderReport">Order Report</span></a></li>
 	                        </ul>
 	                    </li>
-	                    <li class="dropdown" dropdown>
+	                    <!--<li class="dropdown" dropdown>
 	                        <a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Nav.Libraries">Libraries</span><b class="caret"></b></a>
 	                        <ul class="dropdown-menu">
 								<li class="dropdown-header">Books</li>
@@ -167,39 +167,7 @@
 								<li class="dropdown-header">Movies</li>
 								<li><a ui-sref="home.lib.book.list"><span translate="Common.ListView">List View</span></a></li>
 	                        </ul>
-	                    </li>
-	                    <li class="dropdown" dropdown>
-	                        <a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Nav.Acknowledgements">Acknowledgements</span><b class="caret"></b></a>
-	                        <ul class="dropdown-menu">
-								<li><a target="_blank" href="https://www.angularjs.org/">Angular JS</a></li>
-								<li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
-								<li><a target="_blank" href="http://www.tinymce.com/">TinyMCE</a></li>
-								<li><a target="_blank" href="http://www.jquery.com/">jQuery</a></li>
-								<li><a target="_blank" href="http://www.jstree.com/">jsTree</a></li>
-								<li><a target="_blank" href="http://t4t5.github.io/sweetalert/">Sweet Alert</a></li>
-								<li><a target="_blank" href="https://github.com/ezraroi/ngJsTree">ngJsTree</a></li>
-								<li><a target="_blank" href="https://github.com/thomaspark/bootswatch/">bootswatch</a></li>
-								<li><a target="_blank" href="https://angular-translate.github.io/">Angular Translate</a></li>
-								<li><a target="_blank" href="http://www.chartjs.org/">Chart.js</a></li>
-								<li><a target="_blank" href="http://brianreavis.github.io/selectize.js/">selectize.js</a></li>
-								<li><a target="_blank" href="https://github.com/machineboy2045/angular-selectize">angular-selectize</a></li>
-								<li role="separator" class="divider"></li>
-								<li class="dropdown-header">Angular UI</li>
-								<li><a target="_blank" href="http://angular-ui.github.io/">Angular UI</a></li>
-								<li><a target="_blank" href="http://angular-ui.github.io/bootstrap/">UI-Bootstrap</a></li>
-								<li><a target="_blank" href="http://angular-ui.github.io/ui-router/">UI-Router</a></li>
-								<li><a target="_blank" href="https://github.com/angular-ui/ui-tinymce">UI-tinymce</a></li>
-								<li><a target="_blank" href="http://ui-grid.info/">UI-Grid</a></li>
-								<li><a target="_blank" href="http://jtblin.github.io/angular-chart.js/">Angular Chart</a></li>
-								<li role="separator" class="divider"></li>
-								<li class="dropdown-header">CDNs</li>
-								<li><a target="_blank" href="http://www.bootcdn.cn/">BootCDN</a></li>
-								<li role="separator" class="divider"></li>
-								<li><a target="_blank" href="https://github.com/angular-ui/ui-select">UI-Select</a></li>
-								<li><a target="_blank" href="https://github.com/lorenzofox3/Smart-Table">Smart-Table</a></li>
-								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu CDN</a></li>
-	                        </ul>
-	                    </li>
+	                    </li>-->
 	                    <li><a href="#/about"><span translate="Nav.About">About</span></a></li>
 	                </ul>
 	                
