--- a/app/views/home.html
+++ b/app/views/home.html
@@ -153,7 +153,7 @@
 								<li><a ui-sref="home.finance.document.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
 								<li role="separator" class="divider"></li>
 	                            <li><a ui-sref="home.finance.report.balancesheet"><span translate="Finance.BalanceReport">Balance Sheet</span></a></li>
-								<li><a ui-sref="home.finance.report.dailybalance" ng-disabled="true">Daily balance</a></li>
+								<li><a ui-sref="home.finance.report.trantype">Transaction Type Report</a></li>
 								<li><a ui-sref="home.finance.report.ccbalance"><span translate="Finance.ControlCenterReport">Control Center Report</span></a></li>
 								<li><a ui-sref="home.finance.report.orderbalance"><span translate="Finance.OrderReport">Order Report</span></a></li>
 	                        </ul>
