--- a/app/views/about.html
+++ b/app/views/about.html
@@ -5,8 +5,8 @@
         <h3 class="panel-title">About HIH</h3>
       </div>
       <div class="panel-body">
-        H.I.H., Version 0.5;
-        (C) Copyright by Alva Chien, 2014 - 2016;
+        H.I.H., Version 0.5; <br>
+        <div><span translate="Common.Copyright">Copyright</span> © 2014 - 2016 Alva Chien</div>
       </div>
   </div>
   <br >
