Continues the development.

--- a/app/views/finance/financereportcc.html
+++ b/app/views/finance/financereportcc.html
@@ -52,7 +52,7 @@
 	<br>
 	
     <div>
-		<canvas id="barCC" class="chart chart-bar"
+		<canvas id="barCC" class="chart chart-bar" chart-options="optionsCC"
  				chart-data="dataCC" chart-labels="labelsCC">
 		</canvas> 
 	</div>
