Continues the development.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -13,7 +13,7 @@
   <br >
   <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title">Acknowledges</h3>
+        <h3 class="panel-title" translate="Nav.Acknowledgements">Acknowledges</h3>
       </div>
       <div class="panel-body">
         <ul class="list-group">
@@ -46,7 +46,7 @@
 					<a target="_blank" href="http://angular-ui.github.io/ui-router/" class="list-group-item">
             <span class="badge">0.2.15</span>UI-Router</a>
 					<a target="_blank" href="https://github.com/angular-ui/ui-tinymce" class="list-group-item">UI-tinymce</a>
-					<a target="_blank" href="http://ui-grid.info/" class="list-group-item"><span class="badge">3.0.4</span>UI-Grid</a>
+					<a target="_blank" href="http://ui-grid.info/" class="list-group-item"><span class="badge">3.0.7</span>UI-Grid</a>
 					<a target="_blank" href="http://jtblin.github.io/angular-chart.js/" class="list-group-item"><span class="badge">0.8.4</span>Angular Chart</a>
 					<a target="_blank" href="http://www.bootcdn.cn/" class="list-group-item">BootCDN</a>
 					<a target="_blank" href="https://github.com/angular-ui/ui-select" class="list-group-item">UI-Select</a>
