--- a/app/views/finance/financereportbs.html
+++ b/app/views/finance/financereportbs.html
@@ -10,4 +10,34 @@
 	
 	<div id="gridFinReportBS" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
 		 style="width: 100%; height: 500px;"></div>
+		 
+	<br>
+	<br>
+	<div class="row">
+  		<div class="col-xs-12 col-sm-12 col-md-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title" translate="Finance.Incoming">Incoming</h3>
+				</div>
+				<div class="panel-body">
+					<canvas id="polar-area-inc" class="chart chart-polar-area"
+							chart-data="dataIncoming" chart-labels="labelsIncoming">
+					</canvas> 
+				</div>
+			</div>			  
+		</div>
+		
+  		<div class="col-xs-12 col-sm-12 col-md-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title" translate="Finance.Outgoing">Outgoing</h3>
+				</div>
+				<div class="panel-body">
+					<canvas id="polar-area-out" class="chart chart-polar-area"
+							chart-data="dataOutgoing" chart-labels="labelsOutgoing">
+					</canvas> 
+				</div>
+			</div>			  
+		</div>
+	</div>
 </div>
