--- a/app/views/finance/financereporttt.html
+++ b/app/views/finance/financereporttt.html
@@ -44,6 +44,41 @@
 	<div>Currency: <span class="label label-default">{{ReportCurrency}}</span></div>
 	<br>
 	
-	<div id="gridFinReportTT" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
-		 style="width: 100%; height: 500px;"></div>
+	<div class="row">
+  		<div class="col-xs-12 col-sm-12 col-md-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title" translate="Finance.Incoming">Incoming</h3>
+				</div>
+				<div class="panel-body">
+					<div id="gridIncoming" ui-grid="gridOptionsIncoming" ui-grid-selection ui-grid-resize-columns
+		 				style="width: 100%; height: 500px;"></div>
+						 
+					<br>
+					<br>
+					<canvas id="polar-area-inc" class="chart chart-polar-area"
+							chart-data="dataChartIncoming" chart-labels="labelsChartIncoming">
+					</canvas> 
+				</div>
+			</div>			  
+		</div>
+		
+  		<div class="col-xs-12 col-sm-12 col-md-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title" translate="Finance.Outgoing">Outgoing</h3>
+				</div>
+				<div class="panel-body">
+					<div id="gridOutgoing" ui-grid="gridOptionsOutgoing" ui-grid-selection ui-grid-resize-columns
+		 				style="width: 100%; height: 500px;"></div>
+					
+					<br>
+					<br>
+					<canvas id="polar-area-out" class="chart chart-polar-area"
+							chart-data="dataChartOutgoing" chart-labels="labelsChartOutgoing">
+					</canvas> 
+				</div>
+			</div>			  
+		</div>
+	</div>
 </div>
