--- a/app/views/learn/learnhistory.html
+++ b/app/views/learn/learnhistory.html
@@ -21,16 +21,9 @@
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptObject" translate="Learn.LearningObject">Learn Objects</label>
 			<div class="col-sm-10">
-				<ui-select ng-model="SelectedLearnObject.selected" theme="select2"  search-enabled="selectsearchenable" ng-disabled="isReadonly" style="min-width: 300px;">
-			    	<ui-select-match placeholder="Select a learn object or search via the name...">{{$select.selected.name}}</ui-select-match>
-			    	<ui-select-choices repeat="lrnobj in LearnObjects">
-			      		<div ng-bind-html="lrnobj.name | highlight: $select.search"></div>
-			      		<small>
-			      			ID: {{lrnobj.id}}
-			        		Name <span ng-bind-html="''+lrnobj.name | highlight: $select.search"></span>
-			      		</small>
-			    	</ui-select-choices>
-				</ui-select>		 	
+                <selectize placeholder='Select a learn object...' options='arLearnObject' 
+					config="learnobjectConfig" ng-model="SelectedDocumentItem.AccountID"
+                    ng-disabled="isReadonly" required="required"></selectize>
  			</div>
 		</div>
 		
@@ -48,18 +41,16 @@
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptComment" translate="Common.Comment">Comment</label>
 			<div class="col-sm-10">
-				<textarea rows="5" id="iptComment" ng-readonly="isReadonly" cols="50"
-					ng-model="Comment"></textarea>
+				<input type="text" ng-readonly="isReadonly" ng-model="Comment">
 			</div>
 		</div>
 
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
-					ng-disabled="frmObj.$invalid || !frmObj.$dirty" translate="Common.Submit">Submit</button>
+						ng-disabled="frmObj.$invalid || !frmObj.$dirty" translate="Common.Submit">Submit</button>
 				<button class="btn btn-danger" ng-click="close()" translate="Common.Cancel">Cancel</button>
 			</div>
-		</div>
-		
+		</div>		
 	</form>
 </div>
