--- a/app/views/learn/learncategorylist.html
+++ b/app/views/learn/learncategorylist.html
@@ -6,6 +6,6 @@
 		</h2>
 	</div>
 
-	<div id="grid1" ui-grid="gridOptions"
+	<div id="gridLrnCtgy" ui-grid="gridOptions" ui-grid-resize-columns
 		 style="width: 100%; height: 500px;"></div>
 </div>
