Continues the development.

--- a/app/views/learn/learnhistorylist.html
+++ b/app/views/learn/learnhistorylist.html
@@ -27,6 +27,6 @@
 		</div>
 	</div>
 
-	<div id="gridLearnObj" ui-grid="gridOptions" ui-grid-selection
+	<div id="gridLearnObj" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
 		 style="width: 100%; height: 500px;"></div>		 
 </div>
