--- a/app/views/userlist.html
+++ b/app/views/userlist.html
@@ -13,7 +13,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="row in arList">
+			<tr ng-repeat="row in arUserList">
 				<td>{{row.UserID}}</td>
 				<td>{{row.DisplayAs}}</td>
 			</tr>
