Continues the development.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -122,6 +122,8 @@
 	                            <li><a ui-sref="home.learn.object.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
 	                            <li role="separator" class="divider"></li>
 								<li><a ui-sref="home.learn.history.list"><span translate="Learn.LearningHistory">Learn History</span></a></li>
+								<li><a ui-sref="home.learn.plan.list"><span translate="Learn.LearningPlan">Learn Plan</span></a></li>
+								<li role="separator" class="divider"></li>
 								<li><a ui-sref="home.learn.award.list"><span translate="Learn.LearningAward">Learn Award</span></a></li>
 	                        </ul>
 	                    </li>
