--- a/app/views/learn/learnhistory.html
+++ b/app/views/learn/learnhistory.html
@@ -48,7 +48,7 @@
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
-						ng-disabled="frmObj.$invalid || !frmObj.$dirty" translate="Common.Submit">Submit</button>
+						translate="Common.Submit">Submit</button>
 				<button class="btn btn-danger" ng-click="close()" translate="Common.Cancel">Cancel</button>
 			</div>
 		</div>		
